--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,8 @@ before_install:
   
 # command to install dependencies
 install:
-#  - pip install -r requirements.txt
-   - echo "Done installing dependencies."
+  - pip install -r requirements.txt
+  - echo "Done installing dependencies."
   
 # command to run tests
 script:
