--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,8 @@ before_install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip pytables numpy scipy
-  - conda activate test-environment
-  - python -m pip install .
+  - conda create -q -n test-env python=$TRAVIS_PYTHON_VERSION pip pytables numpy scipy
+  - conda activate test-env
   
 # command to install dependencies
 install:
