--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ nose
 ###### Requirements with Version Specifiers ######
 numpy >= 1.19.2
 scipy >= 1.5.2
-##pytables == 3.6.1
+##pytables == 3.6.1 ## not installable via pip
