--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -20,7 +20,8 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file environment.yml --name base
+        # conda env update --file environment.yml --name base
+        conda env update --name base
         conda install pip pytables numpy scipy tqdm
     - name: Lint with flake8
       run: |
