--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -35,8 +35,6 @@ jobs:
     - name: Test with nose
       run: |
         source activate test-env
-        which python
-        ls
-        conda install nose
+        conda install -y --quiet nose
         nosetests --with-coverage
-        overalls --verbose
+        coveralls --verbose
