add service to coveralls

--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -38,4 +38,4 @@ jobs:
         source activate test-env
         conda install -q nose coveralls
         nosetests --with-coverage
-        coveralls --verbose
+        coveralls --service=github --verbose
