--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -10,10 +10,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.10
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10.0
+        python-version: [3.9, 3.10.0]
     - name: Add conda to system path
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
@@ -35,6 +35,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        python --version
         source activate test-env
         conda install -q nose coveralls
         nosetests --with-coverage
