--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -3,12 +3,12 @@ name: nosetests
 on: [push, pull_request]
 
 jobs:
-  build-linux:
+  build:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [ '3.9', 3.10.0 ]
+        python-version: [ '3.7', '3.8' '3.9', 3.10.0 ]
 
     steps:
     - uses: actions/checkout@v2
@@ -41,4 +41,7 @@ jobs:
         source activate test-env
         conda install -q nose coveralls
         nosetests --with-coverage
+    - name: Coverage
+      if: "${{ matrix.python-version }}, '3.9')"
+      run: |
         coveralls --service=github --verbose
