--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -34,15 +34,15 @@ jobs:
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with nose
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         python --version
         source activate test-env
         conda install -q nose coveralls
         nosetests --with-coverage
     - name: Coverage
-      if: "${{ matrix.python-version }}, 3.9)"
+      if: "(${{ matrix.python-version }}, 3.9)"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         python --version
         source activate test-env
