--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -40,7 +40,7 @@ jobs:
         conda install -q nose coveralls
         nosetests --with-coverage
     - name: Coverage
-      if: "(${{ matrix.python-version }}, 3.9)"
+      if: contains('${{ matrix.python-version }}', '3.9')
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
