--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -23,8 +23,7 @@ jobs:
         conda init bash
     - name: Install dependencies
       run: |
-        # conda env update --file environment.yml --name base
-        conda create -q -n test-env pip pytables numpy scipy tqdm
+        conda create -q -n test-env python=${{ matrix.python-version }} pip pytables numpy scipy tqdm
         source activate test-env
 #    - name: Lint with flake8
 #      run: |
