--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -43,6 +43,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        contains('${{ matrix.python-version }}', '3.9')
         python --version
         source activate test-env
         coveralls --service=github --verbose
