--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -35,6 +35,8 @@ jobs:
     - name: Test with nose
       run: |
         source activate test-env
+        echo ${{ contains('${{ matrix.python-version }}', '3.') }}
+        echo ${{ contains('${{ matrix.python-version }}', '3.9') }}
         python --version
         conda install -q nose coveralls
         nosetests --with-coverage
