--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -35,15 +35,13 @@ jobs:
     - name: Test with nose
       run: |
         source activate test-env
-        echo ${{ contains('${{ matrix.python-version }}', '3.') }}
-        echo ${{ contains( '${{ matrix.python-version }}', '3.9') }}
-        echo ${{ contains( '${{ matrix.python-version }}', 3.9) }}
-        echo  contains( '${{ matrix.python-version }}', 3.9)
+        echo startsWith( ${{ matrix.python-version }}, '3.' )
+        echo startsWith( ${{ matrix.python-version }}, '3.9' )
         python --version
         conda install -q nose coveralls
         nosetests --with-coverage
     - name: Coverage
-      if: ${{ contains('${{ matrix.python-version }}', '3.9') }}
+      if: startsWith( ${{ matrix.python-version }}, '3.9' )
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
