--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -18,6 +18,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Add conda to system path
       run: |
+        echo '${{ matrix.python-version }}'
+        echo ${{ startsWith( '${{ matrix.python-version }}',  3. ) }}
+        echo ${{ startsWith( '${{ matrix.python-version }}', '3.9' ) }}
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
         conda init bash
@@ -35,8 +38,6 @@ jobs:
     - name: Test with nose
       run: |
         source activate test-env
-        echo ${{ startsWith( '${{ matrix.python-version }}', '3.' ) }}
-        echo ${{ startsWith( '${{ matrix.python-version }}', '3.9' ) }}
         python --version
         conda install -q nose coveralls
         nosetests --with-coverage
