--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -36,18 +36,34 @@ jobs:
 #        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with nose
+    - name: Unit Testing
       run: |
         source activate test-env
         python --version
         conda install -q nose coveralls
         nosetests --with-coverage
-    - name: Coverage
-      if: startsWith( ${{ matrix.python-version }}, '3.9' )
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        echo ${{ contains('${{ matrix.python-version }}', '3.9') }}
-        python --version
-        source activate test-env
-        coveralls --service=github --verbose
+    - name: Coveralls
+      uses: AndreMiras/coveralls-python-action@develop
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        parallel: true
+        flag-name: Unit Testing
+        
+  coveralls_finish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Coveralls Finished
+      uses: AndreMiras/coveralls-python-action@develop
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        parallel-finished: true
+    #- name: Coverage
+      #if: startsWith( ${{ matrix.python-version }}, '3.9' )
+      #env:
+        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #run: |
+        #echo ${{ contains('${{ matrix.python-version }}', '3.9') }}
+        #python --version
+        #source activate test-env
+        #coveralls --service=github --verbose
