--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -38,6 +38,7 @@ jobs:
         python --version
         conda install -q nose coveralls
         nosetests --with-coverage
+        find . --name="lcov"
     #- name: Coveralls
       #uses: AndreMiras/coveralls-python-action@develop
       #with:
