--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -38,44 +38,18 @@ jobs:
         python --version
         conda install -q nose coveralls
         nosetests --with-coverage
-        ls -al
-        find . -name "*lcov.info*"
-    #- name: Coveralls
-      #uses: AndreMiras/coveralls-python-action@develop
-      #with:
-        #parallel: true
-        #flag-name: Unit Testing
-    - name: Coveralls Parallel
-      uses: coverallsapp/github-action@master
+    - name: Coveralls
+      uses: AndreMiras/coveralls-python-action@develop
       with:
-        github-token: ${{ secrets.github_token }}
-        flag-name: run-${{ matrix.test_number }}
         parallel: true
+        flag-name: Unit Testing
         
-  #coveralls_finish:
-    #needs: build
-    #runs-on: ubuntu-latest
-    #steps:
-    #- name: Coveralls Finished
-      #uses: AndreMiras/coveralls-python-action@develop
-      #with:
-        #github-token: ${{ secrets.GITHUB_TOKEN }}
-        #parallel-finished: true
-    #- name: Coverage
-      #if: startsWith( ${{ matrix.python-version }}, '3.9' )
-      #env:
-        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #run: |
-        #echo ${{ contains('${{ matrix.python-version }}', '3.9') }}
-        #python --version
-        #source activate test-env
-        #coveralls --service=github --verbose
   finish:
     needs: build
     runs-on: ubuntu-latest
     steps:
     - name: Coveralls Finished
-      uses: coverallsapp/github-action@master
+      uses: AndreMiras/coveralls-python-action@develop
       with:
-        github-token: ${{ secrets.github_token }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         parallel-finished: true
