--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -32,12 +32,16 @@ jobs:
 #        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Set my pythonpath
+      run: |
+         echo "PYTHONPATH=home/runner/work/ >> $GITHUB_ENV
     - name: Unit Testing
       run: |
         source activate test-env
         python --version
         conda install -q nose coveralls
-        echo "::set-env name=PYTHONPATH::home/runner/work/rsatools"
+
+
         nosetests --with-coverage
     - name: Coveralls
       uses: AndreMiras/coveralls-python-action@develop
