actions show python path

--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Set my pythonpath
       run: |
          echo "PYTHONPATH=/home/runner/work/rsatools/rsatools" >> $GITHUB_ENV
+    - name: show python path
+      run: |
+         python -c "import sys; print('\n'.join(sys.path))"
     - name: Unit Testing
       run: |
         source activate test-env
@@ -42,7 +45,9 @@ jobs:
         conda install -q nose coveralls
         pwd
         ls /home/runner/work/rsatools/rsatools
+        python -c "import sys; print('\n'.join(sys.path))"
         echo "PYTHONPATH=/home/runner/work/rsatools/rsatools" >> $GITHUB_ENV
+        python -c "import sys; print('\n'.join(sys.path))"
         nosetests --with-coverage
     - name: Coveralls
       uses: AndreMiras/coveralls-python-action@develop
