--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -11,9 +11,9 @@ jobs:
         python-version: [ 3.7, 3.8, 3.9 ]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Add conda to system path
@@ -23,7 +23,7 @@ jobs:
         conda init bash
     - name: Install dependencies
       run: |
-        conda create -q -n test-env python=${{ matrix.python-version }} pytables numpy scipy tqdm
+        conda create -q -n test-env python=${{ matrix.python-version }} pytables numpy scipy pandas tqdm
         source activate test-env
 #    - name: Lint with flake8
 #      run: |
@@ -32,6 +32,12 @@ jobs:
 #        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Set my pythonpath
+      run: |
+         echo "PYTHONPATH=/home/runner/work/rsatools/rsatools" >> $GITHUB_ENV
+    - name: show python path
+      run: |
+         python -c "import sys; print('\n'.join(sys.path))"
     - name: Unit Testing
       run: |
         source activate test-env
