--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -4,12 +4,16 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    #~ runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [ 3.7, 3.8, 3.9 ]
-
+        python-version: [ 3.7, 3.8, 3.9, 3.10 ]
+        ubuntu-version:
+          - ubuntu-20.04  # For Python 3.7
+          - ubuntu-20.04  # For Python 3.8
+          - ubuntu-22.04  # For Python 3.9
+          - ubuntu-latest # For Python 3.10
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
