--- a/.github/workflows/nosetests.yml
+++ b/.github/workflows/nosetests.yml
@@ -14,6 +14,7 @@ jobs:
           - ubuntu-20.04  # For Python 3.8
           - ubuntu-22.04  # For Python 3.9
           - ubuntu-latest # For Python 3.10
+    runs-on: ${{ matrix.ubuntu-version }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
